# C

./: .gitignore  README.md  example.c  main
IO/: .main.c.swp  IO  Makefile  main.c
OOP/C++/: Makefile  human.hpp  main.cpp  son.hpp
OOP/incapsulation/: Makefile
OOP/inheritance/: main.c
OOP/polymorphism/: main.c
SFML/: Makefile
SFML/src/: main.cpp
android_chat/: Makefile  README.txt  client.c  server.c
app/: Makefile  README.txt  main.c
arrays/: arrays.c
calculator/: calculator.c
char/: char.c  types.c
chat/: Makefile  client.c  server.c
chat/chat-cli/: chat-cli
chat/src/: .main-client.c.swp  api.c  api.h  (+5 more)
cmake/src/: CMakeLists.txt  main.c  vars.h
const/: const.c
coreutils/: dd_old.c
curl/: Makefile
dectochar/: dectochar.c
driver/: Makefile  README.txt  rtl8111.c
files/: files.c
files_advanced/: cp.c  files_advanced.c
firstProg/: README.txt  firstProg.c
for_tests/: if.c  int.c  perror.c  shifts.c  strtoul.c
func/: func.c
kernel/: Makefile  kernel.asm
lesson_words/: Makefile  README.txt  file
loops/: loops.c
ncurses/: Makefile  history.txt  main.c  prog
neural_network/: Makefile
openGL/: .main.c.swp  Makefile  main.c
openGL/vertex buffers/: CMakeLists.txt
openGL/vertex buffers/shaders/: fragment.fsh  vertex.vsh
openGL/vertex buffers/src/: constants.h  main.c  shaders.c  shaders.h
parser/: Makefile
pointers/: YTpointers.c  pointers.c
random/: rand(only linux).c  rand.c
short/: short.c
ssh/: Makefile  main.c
string/: string.c
test/: a.out  main.c
validator/: validator.c
windows/: main.c
(+113 files in other folders)
